Авторизация как по юзернейму, так и по паролю
